--- a/README.adoc
+++ b/README.adoc
@@ -1,9 +1,9 @@
-= Sistema de Gerenciamento deBiblioteca
+= **Sistema de Gerenciamento deBiblioteca**
 :icons: font
 :toc: left
 :toclevels: 2
 
-== 🗒️ Sobre o Projeto
+== 🗒️ **Sobre o Projeto**
 O **Sistema de Gerenciamento de Biblioteca** foi desenvolvido para **facilitar o
 processo** de **empréstimo**, **devolução** e **gerenciamento de livros** em uma
 biblioteca. Através da aplicação, **é possível gerenciar empréstimos de livros,
@@ -11,7 +11,7 @@ disponibilidade de exemplares, cadastro de usuários e gerar relatórios de
 atividades**. O sistema visa **melhorar a experiência do usuário e otimizar a
 administração da biblioteca**, garantindo uma **gestão eficiente e eficaz**.
 
-== 🪵 Recursos
+== 🪵 **Recursos**
 * **Cadastro e gerenciamento de livros** com informações detalhadas
 (título, autor, ISBN, etc.).
 * **Criação e modificação de empréstimos** de livros, com opções de data
@@ -21,7 +21,7 @@ de empréstimo e devolução.
 * **Notificação de usuários** sobre empréstimos e devoluções.
 * **Sistema de login e autenticação** para administradores e usuários.
 
-== 📲 Tecnologias Utilizadas
+== 📲 **Tecnologias Utilizadas**
 1. **Frontend**
 * **o Angular:** Framework utilizado para o desenvolvimento da
 interface de usuário, permitindo uma aplicação interativa e
@@ -37,3 +37,86 @@ informações sobre empréstimos, usuários e livros.
 4. **Autenticação**
 * **o JWT (JSON Web Tokens):** Utilizado para garantir a segurança
 no processo de autenticação e autorização de usuários.
+
+== 🤔 **Como Executar**
+1. **Clone o Repositório**
+Clone o repositório para o seu ambiente local com o comando:
+----
+git clone https://github.com/usuario/sistema-biblioteca.git
+----
+2. **Instale as Dependências do Frontend**
+
+Navegue até o diretório do frontend e instale as dependências com npm:
+----
+cd sistema-biblioteca/frontend
+npm install
+----
+3. **Instale as Dependências do Backend**
+Navegue até o diretório do backend e instale as dependências com
+Maven:
+----
+cd sistema-biblioteca/backend
+mvn install
+----
+4. **Configuração do Banco de Dados**
+Crie um banco de dados MySQL e configure as credenciais no
+arquivo application.properties do backend. Em seguida, execute as
+migrações para criar as tabelas necessárias:
+----
+spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca
+spring.datasource.username=seu_usuario
+spring.datasource.password=sua_senha
+----
+5. **Inicie o Servidor Backend**
+Inicie o servidor do backend com o comando:
+----
+mvn spring-boot:run
+----
+6. **Inicie o Servidor Frontend**
+Inicie o servidor do frontend com o comando:
+----
+ng serve
+----
+7. **Acesse a Aplicação**
+Abra o navegador e acesse a aplicação na URL: http://localhost:4200.
+
+== 📑 **Documentação da API**
+A API do Sistema de Gerenciamento de Biblioteca foi documentada
+utilizando Swagger, permitindo uma visualização interativa e detalhada de
+todos os endpoints disponíveis. Abaixo estão alguns dos endpoints principais:
+
+* **GET /api/books:** Retorna todos os livros disponíveis.
+
+* **POST /api/loans:** Cria um novo empréstimo de livro.
+
+* **GET /api/loans/{id}:** Obtém os detalhes de um empréstimo específico.
+
+* **PUT /api/loans/{id}:** Atualiza informações de um empréstimo.
+
+* **DELETE /api/loans/{id}:** Cancela um empréstimo.
+Para acessar a documentação completa da API no Swagger, inicie o servidor
+backend e acesse:
+----
+http://localhost:8080/swagger-ui.html
+----
+
+== 📩 **Contribuindo**
+1. Faça um fork do repositório.
+2. Crie uma nova branch (git checkout -b feature-nome-da-feature).
+3. Faça as alterações e commit (git commit -am &#39;Adiciona nova feature&#39;).
+
+4. Envie para o repositório original (git push origin feature-nome-da-feature).
+5. Abra um pull request descrevendo as mudanças feitas.
+Licença
+Este projeto está licenciado sob a Licença MIT - veja o arquivo LICENSE para
+mais detalhes.
+
+== 📞 **Contato**
+
+Se você tiver alguma dúvida ou sugestão, entre em contato com a equipe de
+desenvolvimento:
+
+* **Email:** contato@biblioteca.com
+
+* **Telefone:** +55 11 98765-4321
+
